{
    "name": "Default Input Actions",
    "maps": [
        {
            "name": "AA Gamepad",
            "id": "252478e1-a2cb-40cd-b041-c77bfe8fb832",
            "actions": [
                {
                    "name": "NorthBtn",
                    "type": "Button",
                    "id": "661492a2-ce18-428f-8aec-fa98ca340360",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EastBtn",
                    "type": "Button",
                    "id": "551b5076-ad70-44ee-b875-e1184d004dea",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SouthBtn",
                    "type": "Button",
                    "id": "3045d891-9195-4bfc-a704-297ec6c910e2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WestBtn",
                    "type": "Button",
                    "id": "c6bcb06b-1eb4-4291-88d4-c778e6ca4ab9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PositiveBtn",
                    "type": "Button",
                    "id": "1e7c0017-353a-4b58-bf98-41b6185a8ed2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NegativeBtn",
                    "type": "Button",
                    "id": "c163298e-b5c3-4ffd-a6fb-a4c0f85f8c8e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JoystickBtn",
                    "type": "Button",
                    "id": "13de3ce3-81b3-45a9-a162-da1d6908f3d7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JoystickXAxys",
                    "type": "Value",
                    "id": "ec2e3e32-6db1-4c93-85b8-cf6917884b1a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JoystickYAxys",
                    "type": "Value",
                    "id": "c9a73927-c83f-47c0-b8d9-1dc5e38521a1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9bd22e03-ab3d-4718-8a94-0bb99bf47e90",
                    "path": "<HID::Microsoft Corp. Microsoft Corp. Xbox 360 Controller>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NorthBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b33d320-4922-4130-bdaa-cd3181bf580d",
                    "path": "<HID::Microsoft Corp. Microsoft Corp. Xbox 360 Controller>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EastBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b311c993-355f-49ae-85f7-e501a9964ec7",
                    "path": "<HID::Microsoft Corp. Microsoft Corp. Xbox 360 Controller>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SouthBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74cac00e-e875-44f1-99a7-ecb9e226748f",
                    "path": "<HID::Microsoft Corp. Microsoft Corp. Xbox 360 Controller>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WestBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6d92fed-a821-4caf-bac6-b1dd5ef09e18",
                    "path": "<HID::Microsoft Corp. Microsoft Corp. Xbox 360 Controller>/button8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PositiveBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8088d546-9bcd-42b9-baa4-01248dfd6c37",
                    "path": "<HID::Microsoft Corp. Microsoft Corp. Xbox 360 Controller>/button7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NegativeBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a069535c-35e7-425e-9cee-2be62e0eb113",
                    "path": "<HID::Microsoft Corp. Microsoft Corp. Xbox 360 Controller>/button9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0629a6a9-da50-4d23-9447-d86013111b6b",
                    "path": "<HID::Microsoft Corp. Microsoft Corp. Xbox 360 Controller>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickXAxys",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6363d9f-c1d2-4b11-9044-8d62369d74cc",
                    "path": "<HID::Microsoft Corp. Microsoft Corp. Xbox 360 Controller>/stick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickYAxys",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}